# ai-data-cleaning-assistant

./: .env.example  .gcloudignore  .gitignore  GCP_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  cloudbuild.yaml  copilot.md  data.db  demo_script.md  landing_page.ts  openapi.yaml  plan.md  pyproject.toml  requirements.txt  structure.md
.github/workflows/: deploy-gcp.yml  test.yml
agents/: data_cleaning_agent.py  mcp_client.py  mcp_tools.py
agents/prompts/: suggest_cleaning.md
api/: deps.py  main.py
api/routes/: apply.py  download.py  jobs.py  orchestrate.py  report.py  suggestions.py  upload.py
api/schemas/: domain.py  response.py
core/: cleanup.py  config.py  constants.py
deploy/: DEPLOYMENT_CHECKLIST.md  GCP_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  cloudrun-api.yaml  cloudrun-mcp.yaml  cloudrun-n8n.yaml  deploy.sh  quick-deploy.sh
docker/: .dockerignore  Dockerfile  docker-compose.override.yml  docker-compose.yaml
mcp/: Dockerfile  app.py  schemas.py
mcp/tools/: profiling.py  suggestions.py  transformations.py
scripts/: init_db.py
services/: apply_service.py  job_service.py  profiling_service.py  report_service.py  suggestion_service.py  transform_service.py
static/: index.html
storage/db/: __init__.py  models.py  repository.py
tests/: test_e2e_playwright.py  test_end_to_end.py  test_new_operations_integration.py  test_transformations.py
tests/fixtures/: dirty_data.csv  test_inventory.csv
transformations/: operations.py  registry.py
